# osis_scheduling

./: README.md  pyproject.toml
scheduling/: solver.py
tests/: test_solver.py
