[tool.poetry]
name = "osis"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
ortools = "^7.5.7466"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
